--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,6 +1,6 @@
 
 
-body {
+#landing {
 	background: url("../images/bg-landing.jpg");
 	background-repeat: no-repeat;
 	background-size: cover;
@@ -17,16 +17,52 @@ body {
 
 }
 
-.btn-teal {
-	background: #006d5b;
-	color: #faebd7;
+.btn-bb {
+	background: #89f0de;
+	color: black;
 }
 
-.teal {
-	color: teal;
+#bg-bb, .bg-bb {
+	background-color: #89f0de;
+	color: #6c757d;
+}
+
+.baby-blue {
+	color: #89f0de;
 }
 
 .fab {
-	color: #006d5b;
+	color: #89f0de;
 	font-size: 20px;
 }
+
+.fas {
+	color: #89f0de;
+	font-size: 30px;
+}
+
+.bg-orange {
+	background: #f0aa89;
+}
+
+.bg-bb {
+	background: #89f0de;
+}
+
+.column {
+	border-radius: 10px;
+	overflow: hidden;
+	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+	transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+
+.column:hover {
+	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+
+.padding {
+	padding: 60px 0;
+}
+
+
+
