--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -92,6 +92,7 @@
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center center;
+	color: #fffff0;
 }
 
 #parallax-banner {
@@ -140,7 +141,6 @@
 	color: white;
 	padding: 5px;
 	position: relative;
-	max-height: 100vh;
 }
 
 #parallax-about {
@@ -166,6 +166,7 @@
 	margin-top: 30px;
 	padding: 10px;
 	border-radius: 10px;
+	width: 70%;
 
 }
 
@@ -223,3 +224,8 @@
   border-radius: 50%;
 }
 /*end hover*/
+
+#blockquote-1, #blockquote-2, #blockquote-3, #blockquote-4 {
+	background: #fffff0;
+	margin-bottom: 0;
+}
