This contains the final version (v1.0) of my capstone 1

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -144,7 +144,7 @@
 }
 
 #parallax-about {
-	background-image: url("../images/prlx-about.jpg");
+	background-image: url("../images/prlx-about.jpeg");
 	height: 600px; 
 	background-attachment: fixed;
 	background-position: center;
@@ -152,6 +152,7 @@
 	background-size: cover;
 	color: white;
 	position: relative;
+
 }
 
 .vertical-align {
@@ -161,7 +162,7 @@
 	transform: translate(-50%, -50%);
 }
 
-#vision-bg, #about-bg, #mission-bg {
+#vision-bg, #about-bg, #mission-bg, #home {
 	background: linear-gradient(rgba(0,0,0,.5), rgba(0,0,0,.5));
 	margin-top: 30px;
 	padding: 10px;
@@ -218,8 +219,7 @@
 }
 
 .text {
-  /*background-color: #f0aa89;*/
-  font-size: 25px;
+  font-size: 100px;
   padding: 16px 32px;
   border-radius: 50%;
 }
@@ -228,4 +228,9 @@
 #blockquote-1, #blockquote-2, #blockquote-3, #blockquote-4 {
 	background: #fffff0;
 	margin-bottom: 0;
+	font-style: italic;
+}
+
+.font-1 {
+	font-family: 'Monoton', cursive;
 }
