--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -234,3 +234,11 @@
 .font-1 {
 	font-family: 'Monoton', cursive;
 }
+
+#home {
+background: linear-gradient(rgba(0,0,0,.5), rgba(0,0,0,.5));
+	margin-top: 30px;
+	padding: 10px;
+	border-radius: 10px;
+	width: 90%;
+}
