--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -233,6 +233,8 @@
 
 .font-1 {
 	font-family: 'Monoton', cursive;
+	word-wrap: break-word;
+
 }
 
 #home {
@@ -240,5 +242,5 @@ background: linear-gradient(rgba(0,0,0,.5), rgba(0,0,0,.5));
 	margin-top: 30px;
 	padding: 10px;
 	border-radius: 10px;
-	width: 90%;
+	width: 100%
 }
