--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -114,7 +114,7 @@
 }
 
 #author-bg {
-	background: linear-gradient(rgba(0,0,0,.5), rgba(0,0,0,.5));
+	background: linear-gradient(rgba(0,0,0,.7), rgba(0,0,0,.7));
 	margin-top: 30px;
 	color: white;
 	width: 70%;
@@ -122,7 +122,7 @@
 }
 
 #parallax-mission {
-	background-image:url("../images/prlx-msn.jpg");
+	background-image:url("../images/prlx-msn.jpeg");
 	height: 600px; 
 	background-attachment: fixed;
 	background-position: center;
@@ -134,7 +134,7 @@
 }
 
 #parallax-vision {
-	background-image: url("../images/prlx-vsn.jpg");
+	background-image: url("../images/prlx-vsn.jpeg");
 	height: 600px; 
 	background-attachment: fixed;
 	background-position: center;
@@ -165,7 +165,7 @@
 }
 
 #vision-bg, #about-bg, #mission-bg, #home {
-	background: linear-gradient(rgba(0,0,0,.5), rgba(0,0,0,.5));
+	background: linear-gradient(rgba(0,0,0,.8), rgba(0,0,0,.8));
 	margin-top: 30px;
 	padding: 10px;
 	border-radius: 10px;
@@ -241,7 +241,7 @@
 }
 
 #home {
-background: linear-gradient(rgba(0,0,0,.5), rgba(0,0,0,.5));
+background: linear-gradient(rgba(0,0,0,.7), rgba(0,0,0,.7));
 	margin-top: 30px;
 	padding: 10px;
 	border-radius: 10px;
@@ -265,11 +265,11 @@ background: linear-gradient(rgba(0,0,0,.5), rgba(0,0,0,.5));
 }
 
 #hero {
-/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,ffffff+100&1+0,0+100;White+to+Transparent */
-background: -moz-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%); /* FF3.6-15 */
-background: -webkit-linear-gradient(top, rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%); /* Chrome10-25,Safari5.1-6 */
-background: linear-gradient(to bottom, rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#00ffffff',GradientType=0 ); /* IE6-9 */
+/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#000000+0,000000+100&0.65+0,0+100;Neutral+Density */
+background: -moz-linear-gradient(top, rgba(0,0,0,0.65) 0%, rgba(0,0,0,0) 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(top, rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to bottom, rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6000000', endColorstr='#00000000',GradientType=0 ); /* IE6-9 */
 height: 50%;
 
 
