--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -5,20 +5,23 @@
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center center;
-	height: 100%;
+	height: 100vh;
 	width: 100%;
+	position: relative;
 }
 
 #landing-page {
-	color: #faebd7;
-	background: linear-gradient(rgba(0,0,0,.5), rgba(0,0,0,.5));
-	height: 100vh;
-	width: 100%;
+	color: #ffff;
+	background: linear-gradient(rgba(0,0,0,.8), rgba(0,0,0,.8));
+	width: 70%;
+	border: 1px solid white;
+	border-radius: 10px;
+	max-height: 100%;
 
 }
 
 .btn-bb {
-	background: #89f0de;
+	background: #ffc107;
 	color: black;
 }
 
@@ -32,7 +35,7 @@
 }
 
 .fab {
-	color: #89f0de;
+	color: #ffc107;
 	font-size: 20px;
 }
 
@@ -146,14 +149,15 @@
 }
 
 #parallax-about {
-	background-image: url("../images/prlx-about.jpeg");
-	height: 600px; 
+	background-image: url("../images/about-bg.jpeg");
+	height: 500px; 
 	background-attachment: fixed;
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
 	color: white;
 	position: relative;
+	
 
 }
 
@@ -164,7 +168,7 @@
 	transform: translate(-50%, -50%);
 }
 
-#vision-bg, #about-bg, #mission-bg, #home {
+#vision-bg, #mission-bg, #home {
 	background: linear-gradient(rgba(0,0,0,.8), rgba(0,0,0,.8));
 	margin-top: 30px;
 	padding: 10px;
@@ -264,14 +268,25 @@ background: linear-gradient(rgba(0,0,0,.7), rgba(0,0,0,.7));
 	padding: 0;
 }
 
-#hero {
+#hero, #about-bg, #gallery {
 /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#000000+0,000000+100&0.65+0,0+100;Neutral+Density */
 background: -moz-linear-gradient(top, rgba(0,0,0,0.65) 0%, rgba(0,0,0,0) 100%); /* FF3.6-15 */
 background: -webkit-linear-gradient(top, rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 100%); /* Chrome10-25,Safari5.1-6 */
 background: linear-gradient(to bottom, rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6000000', endColorstr='#00000000',GradientType=0 ); /* IE6-9 */
 height: 50%;
-
-
 }
 
+.text-black	{
+	color: black;
+}
+
+#fas2 {
+font-size: 100px;
+color: white;
+}
+
+#footer-index {
+	position: absolute;
+	bottom: 0;
+}
